syntax = "proto3";
package hyperlane.core.v1;

option go_package = "github.com/bcp-innovations/hyperlane-cosmos/x/core/types";

import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

// Mailbox ...
message Mailbox {

  // id ...
  string id = 1;

  // owner ...
  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // message_sent ...
  uint32 message_sent = 3;

  // message_received ...
  uint32 message_received = 4;

  // default_ism ...
  string default_ism = 5;

  // default_hook
  string default_hook = 8;

  // required_hook
  string required_hook = 9;
}

// Params defines the parameters of the module.
message Params {
  option (amino.name) = "hyperlane/mailbox/Params";

  // domain ...
  uint32 domain = 1;
}
